--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,24 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="frypto">
     <ion-title>
-      Ionic Blank
+      Search Flights
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div class="ion-item-input-group">
+      <ion-label text-uppercase>From</ion-label>
+      <ion-input type="text"></ion-input>  
+  </div>                
+
+  <div class="ion-item-input-group">
+      <ion-label text-uppercase>To</ion-label>
+      <ion-input type="text"></ion-input>  
+  </div>       
+
+  <button ion-button block color="frypto" outline large icon-left>
+    <ion-icon name="calendar"></ion-icon>
+      Select dates
+  </button>
 </ion-content>
