--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,13 +8,13 @@
 
 <ion-content padding>
   <ion-list no-lines>
-    <ion-item>
+    <ion-item class="ion-item-flight">
       <div class = "ion-content-group" item-content item-start>
           <ion-label stacked text-uppercase>From</ion-label>
           <ion-input type="text"></ion-input>
       </div>      
     </ion-item>
-    <ion-item>
+    <ion-item class="ion-item-flight">
       <div class = "ion-content-group" item-content item-start>
           <ion-label stacked text-uppercase>To</ion-label>
           <ion-input type="text"></ion-input>
