--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,13 +11,13 @@
     <ion-item class="ion-item-flight">
       <div class = "ion-content-group" item-content item-start>
           <ion-label stacked text-uppercase>From</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input [(ngModel)] ="flight.from" type="text" (ionFocus) = 'searchAirports("from")'></ion-input>
       </div>      
     </ion-item>
     <ion-item class="ion-item-flight">
       <div class = "ion-content-group" item-content item-start>
           <ion-label stacked text-uppercase>To</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input [(ngModel)] ="flight.to" type="text" (ionFocus) = 'searchAirports("to")'></ion-input>
       </div>      
     </ion-item>
     <ion-item>
